skip ansible lint
Error:
ANSIBLE0012 Commands should not change things if nothing needs doing
restart-services.yml:4
Task/Handler: stop all containers

Ignored because:
This command already does nothing when nothing needs doing

--- a/restart-services.yml
+++ b/restart-services.yml
@@ -3,6 +3,8 @@
   tasks:
     - name: stop all containers
       shell: docker stop $(docker ps -a -q)
+      tags:
+        - skip_ansible_lint
     - name: restart service
       systemd:
         name: "{{ item }}"
