--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   - destroy
 
 variables:
-  DEV_TOOLS_IMAGE:            ${CI_REGISTRY_IMAGE}-tools:v5
+  DEV_TOOLS_IMAGE:            ${CI_REGISTRY_IMAGE}-tools:latest
   KUBECONFIG:                 ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
   E2E_PARALLELIZATION:        25
   OVH_REGION_NAME:            SBG3
