seperated Makefile targets for deployment of kubernetes and creation of local volumes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ deploy:
     - make deploy
   artifacts:
     paths:
-      - addons/labeled-volume
+      - addons/labeled-volumes
       - certificates/users
 
 redeploy:
