removed specific version to docker

--- a/roles/ubuntu-1604/tasks/main.yml
+++ b/roles/ubuntu-1604/tasks/main.yml
@@ -32,5 +32,5 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - docker-ce=17.03.2~ce-0~ubuntu-xenial
+    - docker-ce
     - socat
