--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -28,6 +28,12 @@
     - { role: etcd }
 
 - hosts: masters
+  tasks:
+    - name: create user access tokens
+      include_role:
+        name: authentication-tokens
+      delegate_to: localhost
+      run_once: true
   roles:
     - { role: master }
 
