--- a/roles/node/tasks/kubelet.yml
+++ b/roles/node/tasks/kubelet.yml
@@ -62,3 +62,8 @@
   template:
     src: kubelet-logrotate.j2
     dest: /etc/logrotate.d/kubelet
+
+- name: install socat
+  package:
+    name: "socat"
+    state: present
