--- a/roles/ubuntu-1604/tasks/main.yml
+++ b/roles/ubuntu-1604/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: import kernel configuration
+  import_tasks: kernel-configuration.yml
+
 - name: install python
   raw: ( test -e /usr/bin/python && echo "/usr/bin/python found" ) || ( apt -y update && apt install -y python )
   register: install_python_result
