--- a/dev-tools/Dockerfile
+++ b/dev-tools/Dockerfile
@@ -20,9 +20,10 @@ RUN apt-get update && \
 CMD ["bash"]
 
 # ansible
+ENV ANSIBLE_VERSION 2.5.0
 RUN apt-add-repository ppa:ansible/ansible && \
 	apt-get update && \
-	apt-get install -y --no-install-recommends ansible python-pip python-shade && \
+    apt-get install -y --no-install-recommends ansible=${ANSIBLE_VERSION}-1ppa~artful python-pip python-shade && \
 	apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
