--- a/addons/local-volume-provisioner.yml
+++ b/addons/local-volume-provisioner.yml
@@ -42,12 +42,12 @@ items:
           restartPolicy: Never
           containers:
           - name: bootstrapper
-            image: quay.io/external_storage/local-volume-provisioner-bootstrap:latest
+            image: quay.io/external_storage/local-volume-provisioner-bootstrap:v2.0.0
             env:
             - name: MY_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
             args:
-            - --image=quay.io/external_storage/local-volume-provisioner:latest
+            - --image=quay.io/external_storage/local-volume-provisioner:v2.0.0
             - --volume-config=local-volume-config
