reduced apiserver memory limit for testing environments

--- a/group_vars/testing.yml
+++ b/group_vars/testing.yml
@@ -1,6 +1,8 @@
 
 authorization_mode: AlwaysAllow
 
+apiserver_limit_target_ram_mb: "{{ 350 + (nodes_count|int * kubelet_max_pods * 2) }}"
+
 cluster:
   name: kubernetes-development
   api_domain: kubernetes
