--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,10 +37,10 @@ provision:
   image: ${DEV_TOOLS_IMAGE}
   retry: 2
   script:
-    - mkdir ~/.ssh
-    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/id_rsa
-    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/id_rsa.pub
-    - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
+    - mkdir -p ~/.ssh/${CI_PROVISION}
+    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa
+    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa.pub
+    - chmod 400 ~/.ssh/${CI_PROVISION}/id_rsa ~/.ssh/${CI_PROVISION}/id_rsa.pub
     - touch inventory
     - make ${CI_PROVISION}-provision
     - make certificates
@@ -69,10 +69,10 @@ deploy:
   image: ${DEV_TOOLS_IMAGE}
   retry: 2
   script:
-    - mkdir ~/.ssh
-    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/id_rsa
-    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/id_rsa.pub
-    - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
+    - mkdir -p ~/.ssh/${CI_PROVISION}
+    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa
+    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa.pub
+    - chmod 400 ~/.ssh/${CI_PROVISION}/id_rsa ~/.ssh/${CI_PROVISION}/id_rsa.pub
     - make deploy
   artifacts:
     paths:
@@ -84,10 +84,10 @@ redeploy:
   image: ${DEV_TOOLS_IMAGE}
   retry: 2
   script:
-    - mkdir ~/.ssh
-    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/id_rsa
-    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/id_rsa.pub
-    - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
+    - mkdir -p ~/.ssh/${CI_PROVISION}
+    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa
+    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa.pub
+    - chmod 400 ~/.ssh/${CI_PROVISION}/id_rsa ~/.ssh/${CI_PROVISION}/id_rsa.pub
     - make deploy | tee deploy.log
     - grep "changed=0    unreachable=0    failed=0" deploy.log | wc -l | grep 8
 
@@ -96,10 +96,10 @@ bats:
   image: ${DEV_TOOLS_IMAGE}
   retry: 2
   script:
-    - mkdir ~/.ssh
-    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/id_rsa
-    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/id_rsa.pub
-    - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
+    - mkdir -p ~/.ssh/${CI_PROVISION}
+    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa
+    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa.pub
+    - chmod 400 ~/.ssh/${CI_PROVISION}/id_rsa ~/.ssh/${CI_PROVISION}/id_rsa.pub
     - make bats
 
 cleanup e2e ns:
