--- a/group_vars/digital-ocean.yml
+++ b/group_vars/digital-ocean.yml
@@ -1,6 +1,6 @@
 ---
 ansible_ssh_common_args: -o StrictHostKeyChecking=no
-ansible_ssh_private_key_file: ~/.ssh/id_rsa
+ansible_ssh_private_key_file: ~/.ssh/digital-ocean/id_rsa
 
 kubelet_max_pods:                   15
 kubelet_kube_reserved:              cpu=100m,memory=200Mi
