--- a/group_vars/ovh.yml
+++ b/group_vars/ovh.yml
@@ -1,7 +1,7 @@
 ---
 ansible_ssh_common_args: -o StrictHostKeyChecking=no
 ansible_ssh_user: ubuntu
-ansible_ssh_private_key_file: ~/.ssh/id_rsa
+ansible_ssh_private_key_file: ~/.ssh/ovh/id_rsa
 ansible_become: true
 
 kubelet_max_pods:                   30
