--- a/roles/ovh-provision/tasks/main.yml
+++ b/roles/ovh-provision/tasks/main.yml
@@ -2,20 +2,20 @@
 
 - name: generate SSH key directory
   file:
-    path: /root/.ssh
+    path: /root/.ssh/digital-ocean
     state: directory
     recurse: yes
 
 - name: generate SSH key
-  command: ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""
+  command: ssh-keygen -b 2048 -t rsa -f /root/.ssh/digital-ocean/id_rsa -q -N ""
   args:
-    creates: /root/.ssh/id_rsa
+    creates: /root/.ssh/digital-ocean/id_rsa
 
 - name: upload public ssh key
   os_keypair:
     state: present
     name: "{{ OVH_KEYPAIR_NAME }}"
-    public_key_file: /root/.ssh/id_rsa.pub
+    public_key_file: /root/.ssh/digital-ocean/id_rsa.pub
 
 - name: launch instances
   os_server:
