--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -19,4 +19,5 @@ addons_cert_dir:   "{{ playbook_dir }}/certificates/addons"
 
 nodes_count: "{{ groups['all'] | length }}"
 
-feature_gates: ""
+feature_gates: {}
+feature_gates_string: ""
