--- a/group_vars/vagrant.yml
+++ b/group_vars/vagrant.yml
@@ -5,8 +5,27 @@ ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
 ansible_become: true
 
 kubelet_max_pods:                   30
-kubelet_kube_reserved:              cpu=100m,memory=200Mi
-kubelet_system_reserved:            cpu=200m,memory=100Mi
-kubelet_eviction_hard:              memory.available<50Mi,nodefs.available<5%,nodefs.inodesFree<5%,imagefs.available<5%,imagefs.inodesFree<5%
-kubelet_eviction_soft:              memory.available<100Mi,nodefs.available<10%,nodefs.inodesFree<10%,imagefs.available<10%,imagefs.inodesFree<10%
-kubelet_eviction_soft_grace_period: memory.available=2m30s,nodefs.available=2m30s,nodefs.inodesFree=2m30s,imagefs.available=2m30s,imagefs.inodesFree=2m30s
+kubelet_kube_reserved:
+  cpu: 100m
+  memory: 200Mi
+kubelet_system_reserved:
+  cpu: 200m
+  memory: 100Mi
+kubelet_eviction_hard:
+  memory.available: 50Mi
+  nodefs.available: 5%
+  nodefs.inodesFree: 5%
+  imagefs.available: 5%
+  imagefs.inodesFree: 5%
+kubelet_eviction_soft:
+  memory.available: 100Mi
+  nodefs.available: 10%
+  nodefs.inodesFree: 10%
+  imagefs.available: 10%
+  imagefs.inodesFree: 10%
+kubelet_eviction_soft_grace_period:
+  memory.available: 2m30s
+  nodefs.available: 2m30s
+  nodefs.inodesFree: 2m30s
+  imagefs.available: 2m30s
+  imagefs.inodesFree: 2m30s
