Revert "use --config=file setup for kubelet configuration"
This reverts commit fbeea9b2d15c8b7ed7fc337fbb28cef59dda8fbf.

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -19,5 +19,4 @@ addons_cert_dir:   "{{ playbook_dir }}/certificates/addons"
 
 nodes_count: "{{ groups['all'] | length }}"
 
-feature_gates: {}
-feature_gates_string: ""
+feature_gates: ""
