--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,15 +1,23 @@
 ---
 
-- name: load overlay kernel module into runtime
+- name: load kernel modules into runtime
   modprobe:
-    name: overlay
+    name: "{{ item }}"
     state: present
+  with_items:
+    - overlay
+    - bridge
+    - br_netfilter
 
-- name: load overlay kernel module at bootup
+- name: load kernel modules at bootup
   lineinfile:
     path: /etc/modules
-    regexp: overlay
-    line: overlay
+    regexp: "{{ item }}"
+    line: "{{ item }}"
+  with_items:
+    - overlay
+    - bridge
+    - br_netfilter
 
 - name: configure docker
   template:
