added sshpass to enable ansible connections with ask for password

--- a/docker/dev-tools/Dockerfile
+++ b/docker/dev-tools/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && \
 		nano dnsutils \
 		iputils-ping \
 		openssh-client \
+		sshpass \
 		make \
 		bash-completion \
 		apache2-utils \
