--- a/roles/hcloud-provision/defaults/main.yml
+++ b/roles/hcloud-provision/defaults/main.yml
@@ -12,5 +12,5 @@
  image: ubuntu-16.04
  server_type: cx11
  location: nbg1
- ssh_keys: hcloud-ssh-Key
+ ssh_keys: "{{ HCLOUD_KEYPAIR_NAME }}"
  start_after_create: true
