--- a/roles/hcloud-provision/defaults/main.yml
+++ b/roles/hcloud-provision/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
+- HCLOUD_TOKEN: vezxPoKePp5Q6FJAP9xFzZp7jWzMTYTHTJSCfhZmzlNQzoBLYkxUuEKztekq6xEs
+- ANSIBLE_LIBRARY: ./library
 - hcloud_server:
   name:
     - node1
@@ -10,7 +12,7 @@
     - node4
     groups: hcloud,ubuntu-1604,testing
  image: ubuntu-16.04
- server_type: cx11
+ server_type: cx51
  location: nbg1
  ssh_keys: "{{ HCLOUD_KEYPAIR_NAME }}"
  start_after_create: true
