added hcloud modules for mac // added destroy role

--- a/hcloud-provision.yml
+++ b/hcloud-provision.yml
@@ -3,4 +3,4 @@
   hosts: localhost
   roles:
     - { role: hcloud-provision }
-    - { role: rewrite-inventory }
+#    - { role: rewrite-inventory }
