--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -20,3 +20,5 @@ addons_cert_dir:   "{{ playbook_dir }}/certificates/addons"
 nodes_count: "{{ groups['all'] | length }}"
 
 feature_gates: ""
+
+HCLOUD_NODES_PREFIX: "konz-testet"
